# schema-studio

./: .dockerignore  .env.example  .env.light.example  .gitignore  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MANIFEST.in  PLUGIN_RULES.md  README.md  REPO_GUIDE.md  dev.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: auth.py  celery_app.py  custom_graph_edits.py  diff.py  edit_store.py  git_utils.py  graph_runner.py  main.py  migrate_sqlite_to_mongo.py  mongo.py  rdfs_io.py  repo_utils.py  requirements.txt  routes_git.py  routes_tasks.py  settings.py  tasks.py
api/light_mode/: __init__.py  app.py  cli.py  schema_source.py  store.py
api/light_mode/static/: index.html
api/light_mode/tests/: test_light_mode_policy.py  test_schema_source.py  test_schema_source_profiles.py
api/tests/: conftest.py  test_auth_registration.py  test_custom_graph_edits.py  test_custom_quantity.py  test_edit_persistence.py  test_empty_canvas.py  test_rdfs_io.py  test_tasks.py
assets/logos/: style.css
docker/: Caddyfile  Dockerfile.api  Dockerfile.caddy  entrypoint.api.sh
docs/: bam-schema-selection-plan.md  desktop-light-mode.md  desktop-mode-extension.md  desktop-roadmap.md  light-mode-schema-selection.md  tauri-light-mode-plan.md
extractor/: graph_builder.py  usage_index.py
extractor/tests/: test_graph_builder_bam.py  test_graph_builder_module_filter.py  test_settings_repo_mapping.py
scripts/: build_light_mode_backend.py  sync_light_mode_static.sh  tauri_light_mode_backend_entry.py
scripts/legacy/: migrate_sqlite_to_mongo.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  BranchDiffBar.tsx  GraphView.tsx  api.ts  index.css  types.ts
web/src-tauri/: Cargo.toml  build.rs  tauri.bundle.conf.json  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon_light.icns
web/src-tauri/src/: main.rs
web/src/components/: AddQuantityForm.tsx  CollapsibleSection.tsx  DocPanel.tsx  Graph.tsx  OverviewGrid.tsx  OverviewList.tsx  QuantityEditPanel.tsx  UnderTheHoodPanel.tsx  quantityShared.ts
web/src/constants/: api.ts  defaults.ts
web/src/store/: selection.ts  workspace.ts
web/src/types/: api.ts  uml.ts  workspace.ts
web/src/utils/: errors.ts  identifier.ts  (+1 more)
web/tests/: add-quantity-form.test.tsx  app-quantity-add.test.tsx  audit-trail-applied-edits.test.tsx  audit-trail-remove-quantity.test.tsx  collapsible-section.test.tsx  contracts.test.ts  doc-panel.test.tsx  overview-grid.test.tsx  quantity-edit-panel.test.tsx  uml-state-inheritance.test.ts
(+16 files in other folders)
