[project]
name = "schema-uml"
version = "0.1.0"
description = "UML-style viewer for NOMAD-compatible schemas"
authors = [{ name = "Dr. Esma Birsen Boydaş" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn",
    "pydantic>=2,<3",
    "networkx",
    "gitpython",
    "orjson",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=7",
]
